--- a/.cargo/config
+++ b/.cargo/config
@@ -1,7 +1,10 @@
 [target.thumbv7em-none-eabihf]
-runner = 'arm-none-eabi-gdb -q -x openocd.gdb'
+runner = 'probe-run --connect-under-reset'
 rustflags = [
-  "-C", "link-arg=-Tlink.x"
+  # "-C", "linker=flip-link",
+  "-C", "link-arg=-Tlink.x",
+  "-C", "link-arg=-Tdefmt.x",
+  # "-C", "link-arg=--nmagic",
 ]
 
 [build]
