--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/stm32-rs/stm32g4xx-hal"
 version = "0.0.0"
 
 [dependencies]
-cortex-m = "0.7.1"
+cortex-m = "0.7.3"
 nb = "0.1.1"
 stm32g4 = "0.14.0"
 paste = "1.0"
@@ -44,13 +44,19 @@ default-features = false
 version = "1.1"
 
 [dependencies.defmt]
-version = "0.3.0"
+version = "0.3.1"
+optional = true
+
+[dependencies.stm32-usbd]
+version = "0.6"
 optional = true
 
 [dev-dependencies]
-cortex-m-rt = "0.6.10"
-cortex-m-rtfm = "0.5.1"
+cortex-m-rt = "0.7.1"
+defmt-rtt = "0.3.1"
+cortex-m-rtic = "0.5.8"
 cortex-m-semihosting = "0.3.5"
+panic-probe = { version = "0.3.0", features = ["print-defmt"] }
 panic-semihosting = "0.5.3"
 panic-halt = "0.2.0"
 panic-itm = "0.4.2"
@@ -63,6 +69,8 @@ panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
 mpu6050 = "0.1.4"
 bme680 = "0.6.0"
 embedded-sdmmc = "0.3.0"
+usbd-serial = "0.1.1"
+usb-device = "0.2.8"
 
 #TODO: Separate feature sets
 [features]
@@ -80,7 +88,8 @@ stm32g4a1 = ["stm32g4/stm32g4a1"]
 log-itm = ["cortex-m-log/itm"]
 log-rtt = []
 log-semihost = ["cortex-m-log/semihosting"]
-unstable-defmt = ["defmt"]
+defmt-logging = ["defmt"]
+usb_fs = ["stm32-usbd"]
 
 [profile.dev]
 codegen-units = 1
